--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.7.0",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
+    "image-webpack-loader": "^8.1.0",
     "jspdf": "^2.5.1",
     "pdfmake": "^0.2.8",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
+    "react-window": "^1.8.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
