--- a/package.json
+++ b/package.json
@@ -7,21 +7,27 @@
     "@fontsource/krona-one": "^5.0.8",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/search": "^3.12.0",
+    "@react-pdf-viewer/zoom": "^3.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "es6-promise": "^4.2.8",
-    "firebase": "^10.7.0",
+    "firebase": "^10.7.2",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
     "image-webpack-loader": "^8.1.0",
     "jspdf": "^2.5.1",
+    "pdfjs-dist": "^3.11.174",
     "pdfmake": "^0.2.8",
+    "pspdfkit": "^2024.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
     "react-pdf": "^7.7.0",
+    "react-pdf-highlighter": "^6.1.0",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
