--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autocorrect": "^1.2.0",
     "es6-promise": "^4.2.8",
     "firebase": "^10.7.2",
     "html2canvas": "^1.4.1",
@@ -29,11 +30,12 @@
     "react-pdf": "^7.7.0",
     "react-pdf-highlighter": "^6.1.0",
     "react-player": "^2.14.1",
-    "react-router-dom": "^6.20.1",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
     "react-window": "^1.8.10",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "wouter": "^2.12.1"
   },
   "scripts": {
     "start": "react-scripts start",
