--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fontsource/krona-one": "^5.0.8",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/search": "^3.12.0",
     "@react-pdf-viewer/zoom": "^3.12.0",
