--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "html2pdf.js": "^0.10.1",
     "image-webpack-loader": "^8.1.0",
     "jspdf": "^2.5.1",
+    "panolens": "^0.12.1",
     "pdfjs-dist": "^3.11.174",
     "pdfmake": "^0.2.8",
     "pspdfkit": "^2024.1.0",
     "react": "^18.2.0",
+    "react-360-view": "^0.1.3",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
@@ -37,6 +39,7 @@
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
     "react-window": "^1.8.10",
+    "three": "^0.162.0",
     "web-vitals": "^2.1.4",
     "wouter": "^2.12.1"
   },
