--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "ISKA Virtual Tour",
-  "name": "ISKA VIRTUAL TOUR",
+  "short_name": "ISKA Campus Tour",
+  "name": "ISKA CAMPUS TOUR",
   "icons": [
     {
       "src": "iska-iconn.ico",
