--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "pspdfkit": "^2024.1.0",
     "react": "^18.2.0",
     "react-360-view": "^0.1.3",
+    "react-content-loader": "^7.0.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
+    "react-loading-skeleton": "^3.4.0",
     "react-modal": "^3.16.1",
     "react-pdf": "^7.7.0",
     "react-pdf-highlighter": "^6.1.0",
